# stm32-project-template-v2

./: .clang-format  .clang-tidy  CHANGELOG.md  CMakeLists.txt  GEMINI.md  HOW_TO_BUILD.md  LICENSE.md  PLAN.md  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci-pipeline.yml
cmake/microcontrollers/: common.cmake  stm32l4-gcc.cmake
cmake/toolchains/: gcc-arm-none-eabi.cmake
docs/: cmake-system.md
lib/: CMakeLists.txt
lint/: misra-c-2023-headlines.txt  misra.json  suppressions.txt
mcal/st-stm32l4/include/: rcc.h
mcal/st-stm32l4/source/: gpio.c  rcc.c  systick.c  uart.c
project/ozone/debug/: stm32-project-template-v2.jdebug
scripts/: README.md  build.ps1  build_config.ps1  clean.ps1  config.ps1  flash.ps1  flash_monitor.ps1  migrate_project.py  monitor.ps1  monitor.py  stm32-dev.ps1  terminal.py
scripts/bash/: build.sh  clean.sh  config.sh  flash.sh  stm32-dev.sh
scripts/powershell/: build.ps1  build_config.ps1  clean.ps1  config.ps1  flash.ps1  flash_monitor.ps1  stm32-dev.ps1
source/: button.c  error_handler.c  led.c  log.c  main.c  stm32l4xx_it.c  system_clock.c  system_stm32l4xx.c
src/: main.c
src/bsp/brd/: button.c  button.h  led.c  led.h
src/bsp/core/: gpio.c  gpio.h  rcc.c  stm32l4xx_hal_conf.h  stm32l4xx_it.c  system_clock.c  system_clock.h  systick.c  systick.h  uart.c  uart.h
src/utils/: error_handler.c  error_handler.h  log.c  log.h
temp/: .clang-tidy
